[package]
name = "naty"
version = "0.1.7"
edition = "2021"
description = "Nativefier alternative that provides a WebView of any website with a minimal install size"
license = "MIT"

[dependencies]
naty_app = { path = "naty_app" }
naty_nativefy = { path = "naty_nativefy" }
naty_common = { path = "naty_common" }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[workspace]
members = [
    "naty_app", "naty_common", "naty_nativefy"
]