[package]
name = "naty"
version = "0.2.0"
edition = "2021"
description = "Nativefier alternative that provides a WebView of any website with a minimal install size"
license = "MIT"
repository = "https://github.com/LyonSyonII/naty"
documentation = "https://github.com/LyonSyonII/naty"

[dependencies]
naty_app = { version = "0.2.1", path = "naty_app" }
naty_nativefy = { version = "0.2.1", path = "naty_nativefy" }
naty_common = { version = "0.2.1", path = "naty_common" }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[workspace]
members = [
    "naty_app", "naty_common", "naty_nativefy"
]
