[package]
name = "naty_app"
version = "0.3.9"
authors = ["Liam Garriga <l.garriga.r@tutanota.com>"]
edition = "2021"
description = "Nativefier alternative that provides a WebView of any website with a minimal install size"
license = "MIT"
repository = "https://github.com/LyonSyonII/naty"
documentation = "https://github.com/LyonSyonII/naty"

[dependencies]
naty_common = { version = "0.3.8", path = "../naty_common" }
wry = "0.40.1"
image = { version = "0.25.1", default-features = false, features = ["ico"] }
toml = "0.8.14"
tao = "0.28.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1