[package]
name = "naty_common"
version = "0.3.5"
edition = "2021"
description = "Nativefier alternative that provides a WebView of any website with a minimal install size"
license = "MIT"
repository = "https://github.com/LyonSyonII/naty"
documentation = "https://github.com/LyonSyonII/naty"

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
serde = "1.0.144"
serde_derive = "1.0.144"
url = "2.2.2"

