[package]
name = "naty_common"
version = "0.3.9"
edition = "2021"
description = "Nativefier alternative that provides a WebView of any website with a minimal install size"
license = "MIT"
repository = "https://github.com/LyonSyonII/naty"
documentation = "https://github.com/LyonSyonII/naty"

[dependencies]
clap = { version = "4.1.10", features = ["derive"], optional = true }
serde = { version = "1.0.157", features = ["derive"] }
url = "2.3.1"

[features]
default = []
clap = ["dep:clap"]