[package]
name = "naty_nativefy"
version = "0.3.8"
edition = "2021"
description = "Nativefier alternative that provides a WebView of any website with a minimal install size"
license = "MIT"
repository = "https://github.com/LyonSyonII/naty"
documentation = "https://github.com/LyonSyonII/naty"

[dependencies]
naty_common = { version = "0.3.8", path = "../naty_common", features = ["clap"] }
toml = "0.5.9"
tokio = { version = "1.20.1", features = ["rt"] }
downloader = { version = "0.2.6", features = ["tui"] }
site_icons = "0.1.13"
url = "2.2.2"
reqwest-wasm = "0.11.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1