[package]
name = "naty_nativefy"
version = "0.3.8"
edition = "2021"
description = "Nativefier alternative that provides a WebView of any website with a minimal install size"
license = "MIT"
repository = "https://github.com/LyonSyonII/naty"
documentation = "https://github.com/LyonSyonII/naty"

[dependencies]
naty_common = { version = "0.3.8", path = "../naty_common", features = ["clap"] }
toml = "0.8.14"
tokio = { version = "1.38.0", features = ["rt"] }
downloader = { version = "0.2.7" }
site_icons = "=0.6.3"
reqwest-wasm = "0.11.16"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1